# signup-form-accessibility

./: .gitignore  README.md  audit_analysis.py  automated_testing_script.py  check_files.py  find_dup.py  invalid.csv  json_cleanup.py  results.json  results_analysis.py  retested_signups.csv  sampled_violations.csv  signup_urls.csv  signup_urls_SMALL.csv  signup_urls_fix.csv  test_signup.csv  violations_checker.txt  wcag_violations_hard copy 2.csv  wcag_violations_hard.csv  write_to_file.py
Filtered Sign Up Audits/: 1126records.com_cleaned.json  123.is_cleaned.json  123stitch.com_cleaned.json  123teachme.com_cleaned.json  12weekyear.com_cleaned.json  1hairstop.in_cleaned.json  1sale.com_cleaned.json  1stphorm.com_cleaned.json  40billion.com_cleaned.json  45books.com_cleaned.json  4tronix.co.uk_cleaned.json  54energy.com_cleaned.json  54thrones.com_cleaned.json  64audio.com_cleaned.json  6bittersweets.com_cleaned.json  6wind.com_cleaned.json  800ceoread.com_cleaned.json  8ball.co.uk_cleaned.json  8kcosplay.com_cleaned.json  99perfume.com_cleaned.json  99txs.com_cleaned.json  9cloud.us_cleaned.json  aaa.biz_cleaned.json  aao-usa.com_cleaned.json  aardvarkstraws.com_cleaned.json  abaa.org_cleaned.json  abcunderwear.com_cleaned.json  abientot713.com_cleaned.json  abundantearthfiber.com_cleaned.json  (+2317 more)
accessibility-signup-app/: Cargo.toml  index.html  package.json
accessibility-signup-app/src/: lib.rs  main.rs
accessibility-signup-app/src/components/bars/: custom_button.rs  main_title.rs  mod.rs
accessibility-signup-app/src/styles/: input.css  main.css  output.css
(+33660 files in other folders)
