[package]
name = "accessibility-signup-app"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
serde = "1.0.219"
serde_json = "1.0.140"
stylist = { version = "0.13.0", features = ["yew_integration", "parser"] }
wasm-bindgen = "0.2.100"
yew = { version = "0.21.0", features = ["csr"] }
